# waymux_waymux

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  SECURITY.md  action.yml  deny.toml
.github/workflows/: action-selftest.yml  ci.yml  head-to-head.yml
ci/: cargo-tree-guard.sh
crates/waymux-attach/: Cargo.toml
crates/waymux-attach/protocols/: waymux-attach-v1.xml
crates/waymux-attach/src/: main.rs
crates/waymux-cli/: Cargo.toml
crates/waymux-cli/src/: connection.rs  credentials.rs  daemon.rs  lib.rs  main.rs  transport.rs  viewer_token.rs
crates/waymux-cli/tests/: json_exit_envelope.rs  login.rs  remote.rs
crates/waymux-daemon/: Cargo.toml
crates/waymux-daemon/src/: cgroup.rs  main.rs  quota.rs  registry.rs  server.rs  usage_events.rs
crates/waymux-daemon/src/backend/: local.rs  mod.rs
crates/waymux-daemon/tests/: compositor.rs  events.rs  session_control.rs  smoke.rs
crates/waymux-mcp/: Cargo.toml
crates/waymux-mcp/src/: exec.rs  lib.rs  main.rs  registry.rs  server.rs
crates/waymux-mcp/tests/: contract.rs  e2e_fake_cli.rs
crates/waymux-mux-mkv/: Cargo.toml  README.md
crates/waymux-mux-mkv/src/: ebml.rs  lib.rs
crates/waymux-neko-bridge/: NEKO-VENDORED.md  go.mod  go.sum  main.go
crates/waymux-neko-bridge/internal/input/: translator.go  translator_test.go
crates/waymux-neko-bridge/internal/server/: cursor_forward_test.go  dos_test.go  jwt_test.go  server.go  turn.go  turn_test.go  viewer_test.go
crates/waymux-neko-bridge/internal/socket/: protocol.go  protocol_test.go
crates/waymux-neko-bridge/internal/web/: embed.go
crates/waymux-neko-bridge/internal/web/static/: index.html
crates/waymux-protocol/: Cargo.toml  README.md
crates/waymux-protocol/src/: codec.rs  lib.rs  messages.rs
crates/waymux-session/: Cargo.toml  build.rs
crates/waymux-session/examples/: egl_cuda_interop_spike.rs
crates/waymux-session/protocols/: waymux-attach-v1.xml
crates/waymux-session/src/: attach_proto.rs  attach_server.rs  audio.rs  buffer.rs  composite.rs  compositor.rs  control.rs  cuda_nv12_csc.cu  cuda_nv12_csc.ptx  cuda_nvenc_record.rs  dmabuf.rs  events.rs  ffv1_vk_record.rs  ffv1_vk_shim.c  hevc_vk_record.rs  input_bridge.rs  keymap.rs  main.rs  outer_view.rs  recording.rs  shm.rs  state.rs  syncobj.rs  vaapi_h264_record.rs  viewer.rs  vulkan_compute.glsl  vulkan_compute.spv  vulkan_compute_yuv444.glsl  vulkan_compute_yuv444.spv  vulkan_compute_yuv444_2plane.glsl  vulkan_compute_yuv444_2plane.spv  vulkan_record.rs  wl_drm_proto.rs
crates/waymux-session/src/viewer/: bridge.rs  cursor.rs  encoder.rs  protocol.rs
docs/: headless-ci-testing.md  laptop-local-viewer.md
scripts/: laptop-local-viewer.sh  laptop-mint-viewer-token.py  waymux-launch.sh
site/: architecture.html  benchmarks.html  cli.html  crates.html  guides.html  index.html  styles.css
tests/e2e/: bench-headtohead.sh  ci-bench.sh  run-e2e.sh
