[package]
name = "waymux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "waymux command-line interface."
publish = false  # internal binary, not a crates.io showcase lib (only protocol + mux-mkv publish)

[lib]
name = "waymux_cli"
path = "src/lib.rs"

[[bin]]
name = "waymux"
path = "src/main.rs"

[dependencies]
waymux-protocol = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = "0.8"
base64 = "0.22"
async-trait = "0.1"
# `waymux viewer token` mints an ephemeral EdDSA viewer JWT for the
# LOCAL/dev laptop-viewer path (mirrors scripts/laptop-mint-viewer-token.py).
# ed25519-dalek 2.x is already in the workspace tree (waymux-api uses it);
# the `rand_core` feature gives `SigningKey::generate(&mut OsRng)` for the
# throwaway keypair. We build the JWT by hand (header.payload.sig) so no
# heavy JWT framework is pulled into the CLI. uuid mints the `sub` claim.
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
